# ray-tracer

./: .gitignore  Cargo.toml  results.ppm  rustfmt.toml
.github/workflows/: deploy.yml  dev-test.yml  master-status-check.yml  test.yml
src/: bounding_box.rs  bvh.rs  camera.rs  efloat.rs  film.rs  filter.rs  geometry.rs  gui.rs  image.rs  integrator.rs  light.rs  main.rs  material.rs  multithreader.rs  primitive.rs  primitives.rs  rasterizer.rs  rasterizing.rs  ray.rs  raytracing.rs  rect.rs  sampler.rs  scenes.rs  spectra.rs  spectrum.rs  sphere.rs  thread_coordinator.rs  threader.rs  threads.rs  traceable.rs  triangle.rs  util.rs  vec.rs
src/camera/: camera.rs  camera_sample.rs  color.rs  film.rs  mod.rs  rgb.rs
src/concurrency/: concurrent_integrator.rs  mod.rs  multithreader.rs  run_concurrently.rs
src/filter/: box_filter.rs  filter.rs  mod.rs
src/geometry/: lines.rs  mod.rs  plane.rs  points.rs
src/gui/: file_drop_down.rs  gui.rs  gui_settings.rs  gui_state.rs  labels.rs  mod.rs  progress_bar.rs  settings_window.rs  top_frame.rs  validated_text_input.rs
src/integrator/: direct_lighting_integrator.rs  integrator.rs  mod.rs
src/light/: constant_spectra.rs  emit.rs  light.rs  mod.rs  spectrum.rs  spectrum_factory.rs
src/material/: lambertian.rs  material.rs  mod.rs
src/nalgebra_extensions/: mod.rs  point3_extension_methods.rs  vector3_extension_methods.rs
src/primitives/: bvh.rs  hit.rs  mod.rs  primitive.rs  primitives.rs  rect.rs  sphere.rs  triangle.rs
src/radiometry/: coefficients.rs  constants.rs  mod.rs  spectra.rs
src/settings/: mod.rs  settings.rs  settings_patch.rs
src/spectrum/: constant_spectra.rs  mod.rs  spectrum_factory.rs
(+1 files in other folders)
