[package]
name = "Ray_Trace"
version = "0.1.0"
authors = ["Charlie <charliepapworth@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "*"
impl_ops = "*"
fastrand = "*"
tobj = "3.2.0"
num_cpus = "*"
enum_dispatch = "*"
bresenham = { git = "https://github.com/dlredden/bresenham-rs",  branch = "patch-1" }




[profile.release]
debug = true
lto = "fat"
codegen-units = 1
panic = "abort"
